@@ -1,16 +1,14 @@
-package presentation.controller;
+package com.parking_api.presentation.controller;
 
-import application.port.ParkingSpotRepository;
-import domain.ParkingSpot;
-import domain.SpotStatus;
-import presentation.dto.ParkingSpotDTO;
+import com.parking_api.application.port.ParkingSpotRepository;
+import com.parking_api.presentation.dto.ParkingSpotDTO;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
+@RequestMapping("/api/spots")
 public class ParkingSpotController {
 
     private final ParkingSpotRepository parkingSpotRepository;
@@ -19,20 +17,19 @@ public class ParkingSpotController {
         this.parkingSpotRepository = parkingSpotRepository;
     }
 
-    @GetMapping("/spots")
+    @GetMapping
     public List<ParkingSpotDTO> getAllSpots() {
         return parkingSpotRepository.findAll()
                 .stream()
                 .map(spot -> new ParkingSpotDTO(spot.getId(), spot.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @GetMapping("/spots/available")
+    @GetMapping("/available")
     public List<ParkingSpotDTO> getAvailableSpots() {
-        return parkingSpotRepository.findAll()
+        return parkingSpotRepository.findAvailable()
                 .stream()
-                .filter(spot -> spot.getStatus() == SpotStatus.FREE)
                 .map(spot -> new ParkingSpotDTO(spot.getId(), spot.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
